Basic html & css
Basic webpage structure built from Jan 16 in class practice document

--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hibbert Travelogue</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
+<main>
+    <h1> Heading </h1>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+    </p>
+    <figure class="img-container-right">
+        <img src="./cat.jpg" alt="cool pic" width="500" height="500">
+        <figcaption>cool little dude</figcaption>
+    </figure>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+    </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+    </p>
+    <figure class="img-container-left">
+        <img src="./label.jpg" alt="beer label" width="500" height="500">
+        <figcaption>Beer label I made</figcaption>
+    </figure>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+    </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+    </p>
+</main>  
 
 
 <body>
