--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <main>
-    <h1> Heading </h1>
+    <h1> My Top Travel Locations </h1>
+    <h3>Worldwide!</h3>
+    <h2>Hong Kong</h2>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
     </p>
@@ -15,6 +17,7 @@
         <img src="./cat.jpg" alt="cool pic" width="500" height="500">
         <figcaption>cool little dude</figcaption>
     </figure>
+    <h2>Central Italy</h2>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
     </p>
@@ -25,9 +28,14 @@
         <img src="./label.jpg" alt="beer label" width="500" height="500">
         <figcaption>Beer label I made</figcaption>
     </figure>
+    <h2>South of France</h2>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
     </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+    </p>
+    <h2> Where to Next?</h2>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
     </p>
