Copy and Section ID
inserted paragraph copy and created section ID tags for each location topic

--- a/index.html
+++ b/index.html
@@ -6,41 +6,64 @@
     <title>Hibbert Travelogue</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
+<header>
+
+</header>
+
+<!-- Basic paragraph structure adapted from in class work Jan 16-->
 <main>
     <h1> My Top Travel Locations </h1>
     <h3>Worldwide!</h3>
+
+    <section id="hongkong">
     <h2>Hong Kong</h2>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+        Visiting Hong Kong was my first and only time travelling in East Asia. The city was like stepping foot on another planet. This extremely dense urban sprawl not much larger in area than Calgary feels like a treasure trove of new experiences. It would truly take multiple lifetimes to even glimpse the entire city. I feature this relatively unremarkable photo of an aquarium because of the story behind it. If you are trying to find an interesting bar in your general vicinity the Google Maps search will be completely packed. To narrow down our search my buddy and I searched for a hookah bar as a more niche option. This aquarium filled with reef sharks was situated in one of these hookah bars… empty other than ourselves… on the 18th floor of a nondescript skyscraper… through one of the smallest elevators we had ever seen. Needless to say, we spent most of our visit theorizing on how they got their multiple 5-plus foot reef sharks up there from ground level. 
     </p>
     <figure class="img-container-right">
         <img src="./cat.jpg" alt="cool pic" width="500" height="500">
         <figcaption>cool little dude</figcaption>
     </figure>
-    <h2>Central Italy</h2>
+    </section>  
+
+    <section id="france">
+    <h2>South of France</h2>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+        After a few years trapped inside my family decided to take a trip together to London and Paris. After a very busy week running around with my family to see the sights my girlfriend and I planned to escape south for another week of relaxation. We arrived in Nice to perfect weather and a beautiful view of the promenade from our tiny hotel room balcony (pictured below). With nothing on the itinerary but wine and sunshine, we did the French Riviera right! 
     </p>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+
     </p>
     <figure class="img-container-left">
         <img src="./label.jpg" alt="beer label" width="500" height="500">
         <figcaption>Beer label I made</figcaption>
     </figure>
-    <h2>South of France</h2>
+    </section>
+
+    <section id="italy">   
+    <h2>Central Italy</h2>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+        My most recent trip abroad and my first time to Italy. This last-minute trip was a pilgrimage to claim a friend's extra tickets to see Taylor Swift in Milan. Of course, my girlfriend felt it absolutely paramount that we make the journey and I wasn’t going to argue. We fit 3 cities into a week of travel making it a whirlwind of a trip. Despite the short time we spent it admiring the countless ancient wonders, eating delicious food, and of course an endless stream of aperol spitz in the sweltering 30-degree heat. While a short-lived trip I will always remember the heat and bustle fondly as the place where I proposed to my girlfriend. 
     </p>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+
     </p>
+
+    </section> 
+
+    <section id="next">
     <h2> Where to Next?</h2>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, praesentium velit eveniet cum provident quis aspernatur. Eligendi facere eum omnis corrupti voluptatem dolores dolorum ut consequuntur perspiciatis esse! Excepturi, quisquam.
+        The next international trip I hope to take is a longer stay in Japan. Japan has always been at the top of my bucket list and a trip that has been slipping through my fingers for years. First disrupted by COVID and more recently put on hold due to my father's knee surgery. My fiance and I now plan to see the country properly for our honeymoon in the Fall of 2026. From the futuristic megacities to the calming temples we hope to take in everything Japan can offer.
     </p>
+
+    </section>
 </main>  
 
+<Footer>
+
+</Footer>
 
 <body>
     
