Basic Section Nav

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 
 <header>
-
+    
 </header>
 
 <!-- Basic paragraph structure adapted from in class work Jan 16-->
 <main>
     <h1> My Top Travel Locations </h1>
     <h3>Worldwide!</h3>
+
+    <nav>
+        <a class = "nav-link" href ="#hongkong"> Hong Kong </a>
+        <a class = "nav-link" href="#france"> South of France </a>
+        <a class = "nav-link" href="#italy"> Central Italy </a>
+      </nav>
 
     <section id="hongkong">
     <h2>Hong Kong</h2>
