Img captions & nav update
added img alt text and captions for when images are placed

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 <main>
     <h1> My Top Travel Locations </h1>
     <h3>Worldwide!</h3>
-
+<!-- Page navigation using section ID and linking-->
     <nav>
         <a class = "nav-link" href ="#hongkong"> Hong Kong </a>
         <a class = "nav-link" href="#france"> South of France </a>
         <a class = "nav-link" href="#italy"> Central Italy </a>
+        <a class = "nav-link" href="#next"> What's Next? </a>
       </nav>
 
     <section id="hongkong">
@@ -28,8 +29,8 @@
         Visiting Hong Kong was my first and only time travelling in East Asia. The city was like stepping foot on another planet. This extremely dense urban sprawl not much larger in area than Calgary feels like a treasure trove of new experiences. It would truly take multiple lifetimes to even glimpse the entire city. I feature this relatively unremarkable photo of an aquarium because of the story behind it. If you are trying to find an interesting bar in your general vicinity the Google Maps search will be completely packed. To narrow down our search my buddy and I searched for a hookah bar as a more niche option. This aquarium filled with reef sharks was situated in one of these hookah bars… empty other than ourselves… on the 18th floor of a nondescript skyscraper… through one of the smallest elevators we had ever seen. Needless to say, we spent most of our visit theorizing on how they got their multiple 5-plus foot reef sharks up there from ground level. 
     </p>
     <figure class="img-container-right">
-        <img src="./cat.jpg" alt="cool pic" width="500" height="500">
-        <figcaption>cool little dude</figcaption>
+        <img src="./cat.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
+        <figcaption>Hookah Bar Shark Tank</figcaption>
     </figure>
     </section>  
 
@@ -42,8 +43,8 @@
 
     </p>
     <figure class="img-container-left">
-        <img src="./label.jpg" alt="beer label" width="500" height="500">
-        <figcaption>Beer label I made</figcaption>
+        <img src="./label.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
+        <figcaption>The Promenade in Nice</figcaption>
     </figure>
     </section>
 
@@ -52,6 +53,12 @@
     <p>
         My most recent trip abroad and my first time to Italy. This last-minute trip was a pilgrimage to claim a friend's extra tickets to see Taylor Swift in Milan. Of course, my girlfriend felt it absolutely paramount that we make the journey and I wasn’t going to argue. We fit 3 cities into a week of travel making it a whirlwind of a trip. Despite the short time we spent it admiring the countless ancient wonders, eating delicious food, and of course an endless stream of aperol spitz in the sweltering 30-degree heat. While a short-lived trip I will always remember the heat and bustle fondly as the place where I proposed to my girlfriend. 
     </p>
+
+    <figure class="img-container-left"></figure>
+        <img src="./label.jpg" alt="Long river with famour bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
+        <figcaption>Ponte Vecchio bridge in Florence</figcaption>
+    </figure>
+
     <p>
 
     </p>
