Smooth scroll CSS
added smooth scroll behaviour

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hibbert Travelogue</title>
     <link rel="stylesheet" href="/style.css">
+   
 </head>
 
 <header>
     
 </header>
 
-<!-- Basic paragraph structure adapted from in class work Jan 16-->
+<!-- Basic paragraph structure and image wrap adapted from in class work Jan 16-->
 <main>
     <h1> My Top Travel Locations </h1>
     <h3>Worldwide!</h3>
 <!-- Page navigation using section ID and linking-->
+
     <nav>
         <a class = "nav-link" href ="#hongkong"> Hong Kong </a>
         <a class = "nav-link" href="#france"> South of France </a>
