Fig Link to site
hyper link added to fig caption plus target blank for new tab

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </p>
     <figure class="img-container-right">
         <img src="./cat.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
-        <figcaption>Hookah Bar Shark Tank</figcaption>
+        <figcaption> <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g294217-d10539194-Reviews-Bloop_Shisha_Lounge-Hong_Kong.html" target="_blank">Hookah Bar Shark Tank</a></figcaption>
     </figure>
     </section>  
 
