Fig caption links
added figcaption link to other images and correct links to tourism websites

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </p>
     <figure class="img-container-left">
         <img src="./label.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
-        <figcaption>The Promenade in Nice</figcaption>
+        <figcaption><a href="https://www.explorenicecotedazur.com/en/" target="_blank">The Promenade in Nice</a></figcaption>
     </figure>
     </section>
 
@@ -58,7 +58,7 @@
 
     <figure class="img-container-left"></figure>
         <img src="./label.jpg" alt="Long river with famour bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
-        <figcaption>Ponte Vecchio bridge in Florence</figcaption>
+        <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
     </figure>
 
     <p>
