--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <a class = "nav-link" href="#next"> What's Next? </a>
       </nav>
 
-    <section id="hongkong">
+<!-- Column div set up basics learnt from W3 (https://www.w3schools.com/howto/howto_css_two_columns.asp)-->
+    <div class="row">
+        <div class="column">
+            <section id="hongkong">
     <h2>Hong Kong</h2>
     <p>
         Visiting Hong Kong was my first and only time travelling in East Asia. The city was like stepping foot on another planet. This extremely dense urban sprawl not much larger in area than Calgary feels like a treasure trove of new experiences. It would truly take multiple lifetimes to even glimpse the entire city. I feature this relatively unremarkable photo of an aquarium because of the story behind it. If you are trying to find an interesting bar in your general vicinity the Google Maps search will be completely packed. To narrow down our search my buddy and I searched for a hookah bar as a more niche option. This aquarium filled with reef sharks was situated in one of these hookah bars… empty other than ourselves… on the 18th floor of a nondescript skyscraper… through one of the smallest elevators we had ever seen. Needless to say, we spent most of our visit theorizing on how they got their multiple 5-plus foot reef sharks up there from ground level. 
@@ -34,22 +37,22 @@
         <img src="./cat.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
         <figcaption> <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g294217-d10539194-Reviews-Bloop_Shisha_Lounge-Hong_Kong.html" target="_blank">Hookah Bar Shark Tank</a></figcaption>
     </figure>
-    </section>  
+    </section>
 
     <section id="france">
     <h2>South of France</h2>
     <p>
         After a few years trapped inside my family decided to take a trip together to London and Paris. After a very busy week running around with my family to see the sights my girlfriend and I planned to escape south for another week of relaxation. We arrived in Nice to perfect weather and a beautiful view of the promenade from our tiny hotel room balcony (pictured below). With nothing on the itinerary but wine and sunshine, we did the French Riviera right! 
     </p>
-    <p>
-
-    </p>
+    
     <figure class="img-container-left">
         <img src="./label.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
         <figcaption><a href="https://www.explorenicecotedazur.com/en/" target="_blank">The Promenade in Nice</a></figcaption>
     </figure>
     </section>
+        </div>
 
+        <div class="column">
     <section id="italy">   
     <h2>Central Italy</h2>
     <p>
@@ -60,11 +63,6 @@
         <img src="./label.jpg" alt="Long river with famour bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
         <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
     </figure>
-
-    <p>
-
-    </p>
-
     </section> 
 
     <section id="next">
@@ -74,6 +72,8 @@
     </p>
 
     </section>
+    </div>
+</div>
 </main>  
 
 <Footer>
