Optimized photos added
web optimized photos added to repository and linked in index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Visiting Hong Kong was my first and only time travelling in East Asia. The city was like stepping foot on another planet. This extremely dense urban sprawl not much larger in area than Calgary feels like a treasure trove of new experiences. It would truly take multiple lifetimes to even glimpse the entire city. I feature this relatively unremarkable photo of an aquarium because of the story behind it. If you are trying to find an interesting bar in your general vicinity the Google Maps search will be completely packed. To narrow down our search my buddy and I searched for a hookah bar as a more niche option. This aquarium filled with reef sharks was situated in one of these hookah bars… empty other than ourselves… on the 18th floor of a nondescript skyscraper… through one of the smallest elevators we had ever seen. Needless to say, we spent most of our visit theorizing on how they got their multiple 5-plus foot reef sharks up there from ground level. 
     </p>
     <figure class="img-container-right">
-        <img src="./cat.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
+        <img src="/SharkTank.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
         <figcaption> <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g294217-d10539194-Reviews-Bloop_Shisha_Lounge-Hong_Kong.html" target="_blank">Hookah Bar Shark Tank</a></figcaption>
     </figure>
     </section>
@@ -46,7 +46,7 @@
     </p>
     
     <figure class="img-container-left">
-        <img src="./label.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
+        <img src="/Nice_France.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
         <figcaption><a href="https://www.explorenicecotedazur.com/en/" target="_blank">The Promenade in Nice</a></figcaption>
     </figure>
     </section>
@@ -60,7 +60,7 @@
     </p>
 
     <figure class="img-container-left"></figure>
-        <img src="./label.jpg" alt="Long river with famour bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
+        <img src="/Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
         <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
     </figure>
     </section> 
