--- a/index.html
+++ b/index.html
@@ -18,25 +18,28 @@
     <h3>Worldwide!</h3>
 <!-- Page navigation using section ID and linking-->
 
-    <nav>
+    <div class="navbar">
         <a class = "nav-link" href ="#hongkong"> Hong Kong </a>
         <a class = "nav-link" href="#france"> South of France </a>
         <a class = "nav-link" href="#italy"> Central Italy </a>
         <a class = "nav-link" href="#next"> What's Next? </a>
-      </nav>
+        </ul>
+    </div>
 
-<!-- Column div set up basics learnt from W3 (https://www.w3schools.com/howto/howto_css_two_columns.asp)-->
+<!-- Column div set up basics review from W3 (https://www.w3schools.com/howto/howto_css_two_columns.asp)-->
+
     <div class="row">
         <div class="column">
             <section id="hongkong">
     <h2>Hong Kong</h2>
-    <p>
-        Visiting Hong Kong was my first and only time travelling in East Asia. The city was like stepping foot on another planet. This extremely dense urban sprawl not much larger in area than Calgary feels like a treasure trove of new experiences. It would truly take multiple lifetimes to even glimpse the entire city. I feature this relatively unremarkable photo of an aquarium because of the story behind it. If you are trying to find an interesting bar in your general vicinity the Google Maps search will be completely packed. To narrow down our search my buddy and I searched for a hookah bar as a more niche option. This aquarium filled with reef sharks was situated in one of these hookah bars… empty other than ourselves… on the 18th floor of a nondescript skyscraper… through one of the smallest elevators we had ever seen. Needless to say, we spent most of our visit theorizing on how they got their multiple 5-plus foot reef sharks up there from ground level. 
-    </p>
     <figure class="img-container-right">
         <img src="/SharkTank.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
         <figcaption> <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g294217-d10539194-Reviews-Bloop_Shisha_Lounge-Hong_Kong.html" target="_blank">Hookah Bar Shark Tank</a></figcaption>
     </figure>
+    <p>
+        Visiting Hong Kong was my first and only time travelling in East Asia. The city was like stepping foot on another planet. This extremely dense urban sprawl not much larger in area than Calgary feels like a treasure trove of new experiences. It would truly take multiple lifetimes to even glimpse the entire city. I feature this relatively unremarkable photo of an aquarium because of the story behind it. If you are trying to find an interesting bar in your general vicinity the Google Maps search will be completely packed. To narrow down our search my buddy and I searched for a hookah bar as a more niche option. This aquarium filled with reef sharks was situated in one of these hookah bars… empty other than ourselves… on the 18th floor of a nondescript skyscraper… through one of the smallest elevators we had ever seen. Needless to say, we spent most of our visit theorizing on how they got their multiple 5-plus foot reef sharks up there from ground level. 
+    </p>
+   
     </section>
 
     <section id="france">
@@ -52,17 +55,21 @@
     </section>
         </div>
 
-        <div class="column">
+    <div class="column">
+    
     <section id="italy">   
+    
     <h2>Central Italy</h2>
-    <p>
+
+     <p>
         My most recent trip abroad and my first time to Italy. This last-minute trip was a pilgrimage to claim a friend's extra tickets to see Taylor Swift in Milan. Of course, my girlfriend felt it absolutely paramount that we make the journey and I wasn’t going to argue. We fit 3 cities into a week of travel making it a whirlwind of a trip. Despite the short time we spent it admiring the countless ancient wonders, eating delicious food, and of course an endless stream of aperol spitz in the sweltering 30-degree heat. While a short-lived trip I will always remember the heat and bustle fondly as the place where I proposed to my girlfriend. 
     </p>
 
     <figure class="img-container-left"></figure>
-        <img src="/Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
-        <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
+    <img src="/Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
+    <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
     </figure>
+   
     </section> 
 
     <section id="next">
