Italy image problem comment

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     
     <section id="italy">   
     
+    <!-- having a lot of trouble getting this image to react like the others. Beleive it has to do with it being in a second column.-->
     <h2>Central Italy</h2>
 
      <p>
