--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hibbert Travelogue</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
    
 </head>
 
@@ -15,7 +18,7 @@
 <!-- Basic paragraph structure and image wrap adapted from in class work Jan 16-->
 <main>
     <h1> My Top Travel Locations </h1>
-    <h3>Worldwide!</h3>
+    <h2>Worldwide!</h2>
 <!-- Page navigation using section ID and linking-->
 
     <div class="navbar">
