--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 </head>
 
 <header>
-    
-</header>
-
-<!-- Basic paragraph structure and image wrap adapted from in class work Jan 16-->
-<main>
-    <h1> My Top Travel Locations </h1>
-    <h2>Worldwide!</h2>
-<!-- Page navigation using section ID and linking-->
+    <!-- Page navigation using section ID and linking-->
 
     <div class="navbar">
         <a class = "nav-link" href ="#hongkong"> Hong Kong </a>
@@ -28,6 +21,13 @@
         <a class = "nav-link" href="#next"> What's Next? </a>
         </ul>
     </div>
+</header>
+
+<!-- Basic paragraph structure and image wrap adapted from in class work Jan 16-->
+<main>
+    <h1> Jordan's Travel Locations </h1>
+    <h2>Worldwide!</h2>
+
 
 <!-- Column div set up basics review from W3 (https://www.w3schools.com/howto/howto_css_two_columns.asp)-->
 
