--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header>
     <!-- Page navigation using section ID and linking-->
-
+<section id="top">
     <div class="navbar">
         <a class = "nav-link" href ="#hongkong"> Hong Kong </a>
         <a class = "nav-link" href="#france"> South of France </a>
@@ -21,10 +21,12 @@
         <a class = "nav-link" href="#next"> What's Next? </a>
         </ul>
     </div>
+</section>
 </header>
 
 <!-- Basic paragraph structure and image wrap adapted from in class work Jan 16-->
 <main>
+
     <h1> Jordan's Travel Locations </h1>
     <h2>Worldwide!</h2>
 
@@ -88,7 +90,10 @@
 </main>  
 
 <Footer>
-
+    <a class="nav-link" href="#top">Back to Top</a>
+    <p>
+        Copyright Jordan Hibbert, 2025
+    </p>
 </Footer>
 
 <body>
