Nav & column fixes
in class help fixing css for nav buttons and image flex. as well as column spacing

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="france">
     <h2>South of France</h2>
 
-    <figure class="img-container-left"></figure>
+    <figure class="img-container-left">
         <img src="/Nice_France.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
         <figcaption><a href="https://www.explorenicecotedazur.com/en/" target="_blank">The Promenade in Nice</a></figcaption>
     </figure>
@@ -69,9 +69,10 @@
     <section id="italy">   
     
     <!-- having a lot of trouble getting this image to react like the others. Beleive it has to do with it being in a second column.-->
+     <!-- fixed in class. missed a double </figure> instance-->
     <h2>Central Italy</h2>
     
-    <figure class="img-container-left"></figure>
+    <figure class="img-container-right">
     <img src="/Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
     <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
     </figure>
