--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hibbert Travelogue</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Embeded font directions from google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +39,7 @@
             <section id="hongkong">
     <h2>Hong Kong</h2>
     <figure class="img-container-right">
-        <img src="/SharkTank.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
+        <img src="SharkTank.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
         <figcaption> <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g294217-d10539194-Reviews-Bloop_Shisha_Lounge-Hong_Kong.html" target="_blank">Hookah Bar Shark Tank</a></figcaption>
     </figure>
     <p>
@@ -52,7 +52,7 @@
     <h2>South of France</h2>
 
     <figure class="img-container-left">
-        <img src="/Nice_France.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
+        <img src="Nice_France.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
         <figcaption><a href="https://www.explorenicecotedazur.com/en/" target="_blank">The Promenade in Nice</a></figcaption>
     </figure>
     </section>
@@ -73,7 +73,7 @@
     <h2>Central Italy</h2>
     
     <figure class="img-container-right">
-    <img src="/Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
+    <img src="Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
     <figcaption><a href="https://www.visitflorence.com/florence-monuments/ponte-vecchio.html" target="_blank">Ponte Vecchio bridge in Florence</a></figcaption>
     </figure>
 
