--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 
 <!-- Basic paragraph structure and image wrap adapted from in class work Jan 16-->
 <main>
-
+<div class="banner">
     <h1> Jordan's Travel Locations </h1>
     <h2>Worldwide!</h2>
-
+</div>
 
 <!-- Column div set up basics review from W3 (https://www.w3schools.com/howto/howto_css_two_columns.asp)-->
 
     <div class="grid">
         <div class="col">
             <section id="hongkong">
-    <h2>Hong Kong</h2>
+    <h3>Hong Kong</h3>
     <figure class="img-container-right">
         <img src="SharkTank.jpg" alt="Long blue aquarium tank with mutliple sharks swiming around" width="500" height="500">
         <figcaption> <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g294217-d10539194-Reviews-Bloop_Shisha_Lounge-Hong_Kong.html" target="_blank">Hookah Bar Shark Tank</a></figcaption>
@@ -49,7 +49,7 @@
     </section>
 
     <section id="france">
-    <h2>South of France</h2>
+    <h3>South of France</h3>
 
     <figure class="img-container-left">
         <img src="Nice_France.jpg" alt="Long beach and promenade, many peole out walking" width="500" height="500">
@@ -70,7 +70,7 @@
     
     <!-- having a lot of trouble getting this image to react like the others. Beleive it has to do with it being in a second column.-->
      <!-- fixed in class. missed a double </figure> instance-->
-    <h2>Central Italy</h2>
+    <h3>Central Italy</h3>
     
     <figure class="img-container-right">
     <img src="Florence.jpg" alt="Long river with famous bridge ponte vecchio crossing it. Bridge is desnely packed with shops and people" width="500" height="500">
@@ -83,7 +83,7 @@
     </section> 
 
     <section id="next">
-    <h2> Where to Next?</h2>
+    <h3> Where to Next?</h3>
     <p>
         The next international trip I hope to take is a longer stay in Japan. Japan has always been at the top of my bucket list and a trip that has been slipping through my fingers for years. First disrupted by COVID and more recently put on hold due to my father's knee surgery. My fiance and I now plan to see the country properly for our honeymoon in the Fall of 2026. From the futuristic megacities to the calming temples we hope to take in everything Japan can offer.
     </p>
